# Bricks

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE.md  QA_CHECKLIST.md  README.md  SETUP.md  TASK.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: brick_hook.zsh
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_seed_settings.sql  003_backend_context_window.sql
src-tauri/src/: agent.rs  database.rs  lib.rs  llm.rs  main.rs  prompt_info.rs  pty.rs  redact.rs  risk.rs  shell_hook.rs  suggestions.rs  term_grid.rs
src-tauri/src/snapshots/: brick_lib__term_grid__tests__snapshots_simple_grid.snap
src/lib/: AgentPanel.svelte  AgentPanel.test.ts  Block.svelte  BlockList.svelte  BlockList.test.ts  CommandInput.svelte  PromptInfoBar.svelte  Settings.svelte  XTerm.svelte  types.ts
