[package]
name = "brick"
version = "0.1.0"
description = "Brick local-first terminal emulator"
authors = ["Brick Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.80"

[lib]
name = "brick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "brick"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
alacritty_terminal = "0.25"
anyhow = "1.0"
async-trait = "0.1"
aws-sdk-bedrockruntime = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
fuzzy-matcher = "0.3"
keyring = "3"
nix = { version = "0.29", features = ["signal", "process"] }
notify = "6"
portable-pty = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
thiserror = "1"
tiktoken-rs = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
wiremock = "0.6"

[lints]
workspace = true
